@@ -1877,7 +1877,7 @@ foreach my $f (qw(page_api_2 direct-pages))
 show_ntests();
 # ----------
 $td->notify("--- Merging and Splitting ---");
-$n_tests += 22;
+$n_tests += 24;
 
 # Select pages from the same file multiple times including selecting
 # twice from an encrypted file and specifying the password only the
@@ -1944,6 +1944,18 @@ $td->runtest("merge with multiple labels",
 $td->runtest("check output",
              {$td->FILE => "a.pdf"},
              {$td->FILE => "merge-multiple-labels.pdf"});
+$td->runtest("remove labels",
+             {$td->COMMAND =>
+                  "qpdf --empty a.pdf" .
+                  " --remove-page-labels" .
+                  " --pages 11-pages-with-labels.pdf 8-11" .
+                  " minimal.pdf " .
+                  " page-labels-and-outlines.pdf 17-19 --" .
+                  " --static-id"},
+             {$td->STRING => "", $td->EXIT_STATUS => 0});
+$td->runtest("check output",
+             {$td->FILE => "a.pdf"},
+             {$td->FILE => "remove-labels.pdf"});
 
 $td->runtest("split with shared resources",
              {$td->COMMAND =>
